# Introduction-to-Systems-Programming-Wet-3

./: CMakeLists.txt  course_manager.c  grade.h  main.c  semester.c  student.h
HW3/: README.md  course.c  course.h  course_manager.h  grade.c  list.h  main.c  semester.h  student.c
HW4/: Area.cpp  Area.h  CMakeLists.txt  Clan.cpp  Clan.h  Group.cpp  Group.h  Mountain.cpp  Mountain.h  MtmSet.h  Plain.cpp  Plain.h  River.cpp  River.h  World.cpp  World.h  main.cpp
